# spore-code

./: .gitignore  Makefile  README.md  go.mod  go.sum  install.ps1  install.sh  pyproject.toml
acorn/: app.py  background.py  bridge.py  cli.py  config.py  connection.py  constants.py  context.py  permissions.py  plan_approval.py  prompt.py  questions.py  renderer.py  session.py  session_log.py  session_writer.py  state.py  themes.py  updater.py
acorn/commands/: builtin.py  test.py
acorn/handlers/: chat.py  plan.py  questions.py  ws_events.py
acorn/tools/: executor.py  file_ops.py  shell.py
acorn/ui/: widgets.py
cmd/acorn/: main.go  picker.go  wizard.go
cmd/spore/: main.go  picker.go  wizard.go  wizard_test.go
go/: README.md  go.mod  go.sum
internal/app/: banner.go  commands.go  commands_helper_test.go  context.go  history.go  input.go  input_test.go  legacy_cmds.go  model.go  models_preset.go  permissions.go  permmodal.go  plan.go  questions.go  questions_parse_test.go  scrollbar.go  selfupdate.go  selfupdate_test.go  session.go  session_cmds_test.go  sidepanels.go  slash.go  slash_test.go  state.go  tests.go  themes.go  themes_test.go  update.go  updater.go  updater_test.go  view.go  view_test.go  workflow.go
internal/bg/: lifetime_other.go  lifetime_unix.go  manager.go
internal/codeindex/: architecture.go  architecture_test.go  codeindex_test.go  extract_go.go  extract_py.go  extract_py_test.go  parser.go  (+7 more)
scripts/: build.sh  release.sh  test.sh  version.sh
tests/: test_config.py  test_permissions.py  test_questions.py  test_shell.py  test_state.py
(+45 files in other folders)
