[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acorn-cli"
version = "0.2.14"
description = "CLI coding assistant that connects to Anima AI agent"
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "textual>=0.40",
    "tomli>=1.0;python_version<'3.11'",
]

[project.scripts]
acorn = "acorn.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
